--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -16,10 +16,21 @@ $font_0: Ubuntu;
 $font_1: sans-serif;
 
 html,body{
-  background: $background;
+  background-color: $background;
   height:100%;
 }
-.container{
-  background: white;
+
+body {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
