--- a/src/Todo/todo.scss
+++ b/src/Todo/todo.scss
@@ -1,3 +1,11 @@
 .todolist{
   background:white;
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+h1 {
+  text-align: center;
 }
